# llm-benchmark

./: .env.example  .gitignore  PLAN.md  README.md  contribution_history.txt  pyproject.toml  requirements.txt
scripts/: report.py  run_benchmark.py  run_finetune.py  run_optimize.py  serve.py
src/api/: main.py  routes.py
src/benchmark/: mmlu.py  runner.py
src/finetune/: lora.py
src/inference/: gguf_engine.py  hf_engine.py
src/monitoring/: metrics.py
src/optimize/: pipeline.py
src/quantize/: gguf.py
src/storage/: db.py  schema.py
tests/: conftest.py  test_api.py  test_benchmark.py  test_finetune.py  test_inference.py  test_monitoring.py  test_optimize.py  test_quantize.py
